--- a/ios/titanium.xcconfig
+++ b/ios/titanium.xcconfig
@@ -4,11 +4,11 @@
 // OF YOUR TITANIUM SDK YOU'RE BUILDING FOR
 //
 //
-TITANIUM_SDK_VERSION = 8.1.0
+TITANIUM_SDK_VERSION = 8.2.0
 
 //
 // THESE SHOULD BE OK GENERALLY AS-IS
 //
-TITANIUM_SDK = /Users/hans/Library/Application Support/Titanium/mobilesdk/osx/8.1.0
+TITANIUM_SDK = /Users/hans/Library/Application Support/Titanium/mobilesdk/osx/${TITANIUM_SDK_VERSION}
 HEADER_SEARCH_PATHS = $(inherited) "$(TITANIUM_SDK)/iphone/include"
 FRAMEWORK_SEARCH_PATHS = $(inherited) "$(TITANIUM_SDK)/iphone/Frameworks"
